Fix ViewSet filter date picker missing margin (#12299)

--- a/client/scss/components/forms/_input-text.scss
+++ b/client/scss/components/forms/_input-text.scss
@@ -27,6 +27,7 @@ textarea {
   width: 100%;
   padding: theme('spacing.[1.5]') theme('spacing.5');
   min-height: $text-input-height;
+  margin: theme('spacing.4');
 }
 
 // Multiline text fields have larger top-bottom padding.
@@ -45,5 +46,8 @@ textarea {
 .w-field--time_field {
   input {
     width: auto;
+    margin-right: theme('spacing.4');
+    margin-left: theme('spacing.4');
+    padding: theme('spacing.3');
   }
 }
